# AI-SEO-Audit-Optimizations-Platform

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  seoaudit.toml
.github/workflows/: deploy.yml
.streamlit/: config.toml
ai_seo_audit/: __init__.py  ai_engine.py  audit.py  cli.py  config.py  crawler.py  fix_guides.py  js_renderer.py  keyword_research.py  models.py  parser.py  reports.py  utils.py
tests/: __init__.py  test_ai.py  test_audit.py  test_cli.py  test_crawler.py  test_parser.py  test_reports.py
