[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-seo-audit"
version = "1.0.0"
description = "A professional Python-based AI SEO Audit Toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "reportlab>=4.1.0",
    "streamlit>=1.31.0",
    "plotly>=5.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "requests-mock>=1.11.0",
]

[project.scripts]
seoaudit = "ai_seo_audit.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_seo_audit*"]
